--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="item-lista"><a href="#" class="menulink ativo">Home</a></li>
                 <li class="item-lista"><a href="1grau.html" class="menulink">Função do 1º grau</a></li>
                 <li class="item-lista"><a href="2grau.html" class="menulink">Função do 2º grau</a></li>
-                <li class="item-lista"><a href="#" class="menulink">Suspense</a></li>
+                <li class="item-lista"><a href="exp.html" class="menulink">Fenção exponencial</a></li>
                 <li class="item-lista"><a href="#" class="menulink">Clássicos da Literatura</a></li>
             </ul>
 
