--- a/1grau.html
+++ b/1grau.html
@@ -23,7 +23,7 @@
                 <li class="item-lista"><a href="index.html" class="menulink">Home</a></li>
                 <li class="item-lista"><a href="#" class="menulink ativo">Função do 1º grau</a></li>
                 <li class="item-lista"><a href="2grau.html" class="menulink">Função do 2º grau</a></li>
-                <li class="item-lista"><a href="#" class="menulink">Suspense</a></li>
+                <li class="item-lista"><a href="exp.html" class="menulink">função exponencial</a></li>
                 <li class="item-lista"><a href="#" class="menulink">Clássicos da Literatura</a></li>
             </ul>
 
@@ -41,14 +41,17 @@
         <div id="sei-la">
             <h2>Cacuadora de função do primeiro grau</h2>
             <p>Forneça abaixo os coeficientes da função</p>
+            <p>Função genérica: f(x) = ax + b</p>
             <div id="container" class="umgrau">
                 <div class="dados">
-                    <label for="dado-a">Coeficiente A:</label><br>
-                    <input type="number" name="dado-a" id="dado-a">
+                    <label for="dado-a">Coeficiente A:</label>
+                    <input type="number" name="dado-a" id="dado-a"><br>
+                    <label for="dado-a"><small> Define a inclinação.</small></label>
                 </div>
                 <div class="dados">
-                    <label for="dado-b">Coeficiente B:</label><br>
-                    <input type="number" name="dado-b" id="dado-b">
+                    <label for="dado-b">Coeficiente B:</label>
+                    <input type="number" name="dado-b" id="dado-b"><br>
+                    <label for="dado-b"><small>Define a interceptação com o eixo y.</small></label>
                 </div>
             </div>
         
