--- a/2grau.html
+++ b/2grau.html
@@ -23,7 +23,7 @@
                 <li class="item-lista"><a href="index.html" class="menulink">Home</a></li>
                 <li class="item-lista"><a href="1grau.html" class="menulink">Função do 1º grau</a></li>
                 <li class="item-lista"><a href="#" class="menulink ativo">Função do 2º grau</a></li>
-                <li class="item-lista"><a href="#" class="menulink">Suspense</a></li>
+                <li class="item-lista"><a href="exp.html" class="menulink">função exponencial</a></li>
                 <li class="item-lista"><a href="#" class="menulink">Clássicos da Literatura</a></li>
             </ul>
 
@@ -41,18 +41,22 @@
         <div id="sei-la">
             <h2>Cacuadora de função do segundo grau</h2>
             <p>Forneça abaixo os coeficientes da função</p>
+            <p>Função genérica: f(x) = ax² + bx + c</p>
             <div id="container">
                 <div class="dados">
-                    <label for="dado-a">Coeficiente A:</label><br>
-                    <input type="number" name="dado-a" id="dado-a">
+                    <label for="dado-a">Coeficiente A:</label>
+                    <input type="number" name="dado-a" id="dado-a"><br>
+                    <label for="dado-a"><small> Controla a direção e a largura da parábola.</small></label>
                 </div>
                 <div class="dados">
-                    <label for="dado-b">Coeficiente B:</label><br>
-                    <input type="number" name="dado-b" id="dado-b">
+                    <label for="dado-b">Coeficiente B:</label>
+                    <input type="number" name="dado-b" id="dado-b"><br>
+                    <label for="dado-b"><small>Afeta a posição do vértice e a inclinação da parábola.</small></label>
                 </div>
                 <div class="dados">
-                    <label for="dado-c">Coeficiente C:</label><br>
-                    <input type="number" name="dado-c" id="dado-c">
+                    <label for="dado-c">Coeficiente C:</label>
+                    <input type="number" name="dado-c" id="dado-c"><br>
+                    <label for="dado-c"><small>Define o ponto onde a parábola cruza o eixo y</small></label>
                 </div>
             </div>
         
