--- a/2grau.html
+++ b/2grau.html
@@ -46,8 +46,8 @@
                 <div class="dados">
                     <label for="dado-a">Coeficiente A:</label>
                     <input type="number" name="dado-a" id="dado-a"><br>
-                    <label for="dado-a"><small> Controla a direção e a largura da parábola. a deve ser diferente de 0</small></label>
                 </div>
+                <label for="dado-a"><small> Controla a direção e a largura da parábola. a deve ser diferente <br> de 0</small></label>
                 <div class="dados">
                     <label for="dado-b">Coeficiente B:</label>
                     <input type="number" name="dado-b" id="dado-b"><br>
