--- a/exp.html
+++ b/exp.html
@@ -51,17 +51,17 @@
                 <div class="dados">
                     <label for="dado-b">Coeficiente B:</label>
                     <input type="number" name="dado-b" id="dado-b"><br>
-                    <label for="dado-b"><small>Ajusta a altura e inverte o gráfico se negativo. <br> deve ser diferente de 0</small></label>
+                    <label for="dado-b"><small>Ajusta a altura e inverte o gráfico se negativo.</small></label>
                 </div>
                 <div class="dados">
                     <label for="dado-c">Coeficiente C:</label>
                     <input type="number" name="dado-c" id="dado-c"><br>
-                    <label for="dado-c"><small>Move o gráfico para a direita (c &gt; 0) <br> ou esquerda (c &lt; 0).</small></label>
+                    <label for="dado-c"><small>Move o gráfico para a direita (c &gt; 0) <br> ou esquerda (c &lt; 0). Não precisa ser <br> especificado</small></label>
                 </div>
                 <div class="dados">
-                    <label for="dado-d">Coeficiente C:</label>
+                    <label for="dado-d">Coeficiente D:</label>
                     <input type="number" name="dado-d" id="dado-d"><br>
-                    <label for="dado-d"><small>Sobe (d &gt; 0) ou desce (d &lt; 0) o gráfico <br> e ajusta a linha da assíntota.</small></label>
+                    <label for="dado-d"><small>Sobe (d &gt; 0) ou desce (d &lt; 0) o gráfico <br> e ajusta a linha da assíntota. Não <br> precisa ser especificado</small></label>
                 </div>
             </div>
         
