--- a/2grau.html
+++ b/2grau.html
@@ -51,12 +51,12 @@
                 <div class="dados">
                     <label for="dado-b">Coeficiente B:</label>
                     <input type="number" name="dado-b" id="dado-b"><br>
-                    <label for="dado-b"><small>Afeta a posição do vértice e a inclinação da parábola.</small></label>
+                    <label for="dado-b"><small>Afeta a posição do vértice e a inclinação <br> da parábola.</small></label>
                 </div>
                 <div class="dados">
                     <label for="dado-c">Coeficiente C:</label>
                     <input type="number" name="dado-c" id="dado-c"><br>
-                    <label for="dado-c"><small>Define o ponto onde a parábola cruza o eixo y</small></label>
+                    <label for="dado-c"><small>Define o ponto onde a parábola cruza <br> o eixo y</small></label>
                 </div>
             </div>
         
